JEDIT VERSION HISTORY

* Version 2.4pre6

+ New Features

- In C-like modes, the indent will be shifted if the previous line contains
  an 'if', 'else', 'while', 'for' or 'case' statement. This is implemented
  using a regular expression in the 'indentPrevLine' buffer-local property

+ Enhancements

- XML mode now opens all files whose first line contains <?xml in XML mode
- XSL mode now highlights JavaScript in <xsl:script> and <xsl:eval> tags
  (Oliver Rutherfurd)
- jEdit will now display more meaningful error messages when you try to
  open a directory, or a file with insufficent permissions
- Text area actions are now implementations of the EditAction class. This
  simplifies matters in a few places
- New jEdit.getBooleanProperty() and setBooleanProperty() methods

+ Bug Fixes

- If an error occurred while loading or saving a file, jEdit would claim that
  the file had been modified on disk (since 2.4pre1)
- All mode files were invalid because their first line was not
  '<?xml version="1.0"?>' (since 2.4pre2)
- The text area no longer loses focus when saving (since 2.3pre3)

+ API Changes

- InputHandler.addKeyBinding() and executeAction() now take EditActions, not
  ActionListeners as parameters

* Version 2.4pre5

+ New Features

- Digits will be highlighted if the HIGHLIGHT_DIGITS attribute is set to
  "TRUE" on a ruleset
- The background color of syntax tokens can now be specified (Andre Kaplan)
- If an autosave file is found, jEdit will now offer to load it

+ Enhancements

- TokenMarker now uses a hashing algorithm to check against far fewer rules
  than previously. This should result in a 2-10x speed improvement! This is
  particularly noticable when loading files
- 'Action tokens' overhead removed TokenMarker, should speed things up a
  wee bit
- XMode documentation
- xmode.dtd is actually a valid DTD now (Mike Dillon)
- Documentation updates
- Go to Line and Select Line Range commands moved to top level of Edit menu for
  easier access

+ Bug Fixes
