@@ -99,7 +99,7 @@
 		<SEQ TYPE="NULL">:</SEQ>
 
 		<!-- Keywords -->
-		<KEYWORDS>
+		<KEYWORDS IGNORE_CASE="FALSE">
 			<KEYWORD1>new</KEYWORD1>
 			<KEYWORD1>if</KEYWORD1>
 			<KEYWORD1>until</KEYWORD1>
@@ -437,6 +437,31 @@
 		</SPAN>
 
 		<MARK_FOLLOWING TYPE="KEYWORD2">%</MARK_FOLLOWING>
+
+		<SEQ TYPE="LITERAL1">|</SEQ>
+		<SEQ TYPE="LITERAL1">&amp;</SEQ>
+		<SEQ TYPE="LITERAL1">!</SEQ>
+		<SEQ TYPE="LITERAL1">&gt;</SEQ>
+		<SEQ TYPE="LITERAL1">&lt;</SEQ>
+		<SEQ TYPE="LITERAL1">)</SEQ>
+		<SEQ TYPE="LITERAL1">(</SEQ>
+		<SEQ TYPE="LITERAL1">=</SEQ>
+		<SEQ TYPE="LITERAL1">!</SEQ>
+		<SEQ TYPE="LITERAL1">+</SEQ>
+		<SEQ TYPE="LITERAL1">-</SEQ>
+		<SEQ TYPE="LITERAL1">/</SEQ>
+		<SEQ TYPE="LITERAL1">*</SEQ>
+		<SEQ TYPE="LITERAL1">^</SEQ>
+		<SEQ TYPE="LITERAL1">~</SEQ>
+		<SEQ TYPE="LITERAL1">}</SEQ>
+		<SEQ TYPE="LITERAL1">{</SEQ>
+		<SEQ TYPE="LITERAL1">.</SEQ>
+		<SEQ TYPE="LITERAL1">,</SEQ>
+		<SEQ TYPE="LITERAL1">;</SEQ>
+		<SEQ TYPE="LITERAL1">]</SEQ>
+		<SEQ TYPE="LITERAL1">[</SEQ>
+		<SEQ TYPE="LITERAL1">?</SEQ>
+		<SEQ TYPE="LITERAL1">:</SEQ>
 	</RULES>
 
 	<RULES SET="EXEC" DEFAULT="KEYWORD3" ESCAPE="\">
